--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,25 +1,10 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  font-family: "Schibsted Grotesk", sans-serif;
+  font-optical-sizing: auto;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
@@ -28,41 +13,129 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  justify-content: center;
+  background-image: url(./assets/fondo.png);
+  background-size: cover;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  color: #414143;
+  text-align: center;
+  font-family: "Schibsted Grotesk";
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -1.6px;
+  margin: 0;
+}
+
+h2 {
+  color: rgba(65, 65, 67, 0.7);
+  text-align: center;
+  font-family: "Schibsted Grotesk";
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -1.28px;
+  margin: 0;
+}
+
+t {
+  color: #414143;
+  font-family: "Schibsted Grotesk";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+input {
+  display: flex;
+  padding: 16px 32px;
+  align-items: center;
+  gap: 10px;
+  align-self: stretch;
+  border-radius: 16px;
+  border: 1px solid #d9d9d9;
+  background: rgba(255, 255, 255, 0.8);
+}
+
+::placeholder {
+  color: #c2c2c2;
+  font-family: "Schibsted Grotesk";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.64px;
+}
+
+input:focus {
+  outline: 3px solid rgba(36, 65, 142, 0.8);
+  transition: 0.1s;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  display: flex;
+  padding: 16px 56px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 24px;
+  color: #ffffff;
+  font-size: 16px;
+  font-style: normal;
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+  line-height: normal;
+  background-color: #24418e;
+  border-width: 0px;
+  transition: 0.3s;
 }
 button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  background-color: #5975c3;
+  transition: 0.3s;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.cancelButton {
+  border-radius: 24px;
+  background: rgba(33, 47, 84, 0.31);
+}
+
+.cancelButton:hover {
+  background-color: rgba(33, 47, 84, 0.2);
+}
+
+.disabledButton {
+  background: rgba(33, 47, 84, 0.05);
+}
+
+.disabledButton:hover {
+  background-color: rgba(33, 47, 84, 0.05);
+  cursor: not-allowed;
+}
+
+label {
+  color: #616773;
+  font-family: "Schibsted Grotesk";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.64px;
+}
+
+.container {
+  display: flex;
+  padding: 32px 48px 24px 48px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 129px;
+  border-radius: 48px;
+  border-top: 1px solid #d9d9d9;
+  border-bottom: 1px solid #d9d9d9;
+  background: rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
