--- a/frontend/src/components/GraphComponent/GraphComponent.css
+++ b/frontend/src/components/GraphComponent/GraphComponent.css
@@ -1,6 +1,7 @@
 .graphComponentContainer {
   display: flex;
-  padding: 16px 24px 24px 24px;
+  padding: 16px;
+  padding-top: 8px;
   flex-direction: column;
   align-items: center;
   gap: 16px;
