--- a/frontend/src/pages/VoteResults/VoteResults.css
+++ b/frontend/src/pages/VoteResults/VoteResults.css
@@ -1,6 +1,6 @@
 .container.VoteResults {
   display: flex;
-  padding: 48px 48px 24px 48px;
+  padding: 24px 24px 24px 24px;
   flex-direction: column;
   align-items: center;
   gap: 16px;
@@ -89,7 +89,8 @@
   flex-direction: column;
   align-items: center;
   gap: 48px;
-  align-self: stretch;
+  width: 100%;
+  height: 100%;
 }
 
 .dashboard {
