--- a/frontend/src/components/GraphComponent/GraphComponent.css
+++ b/frontend/src/components/GraphComponent/GraphComponent.css
@@ -8,7 +8,7 @@
   border-radius: 16px;
   border: 1px solid #d9d9d9;
   background: rgba(255, 255, 255, 0.35);
-  max-width: 100%;
+  width: 100%;
   height: 100%;
 }
 
@@ -67,6 +67,11 @@
 }
 
 .pieChart {
-  max-height: 200px;
   max-width: 100%;
+  max-height: 100%;
+}
+
+.barChart {
+  max-width: 100%;
+  max-height: 100%;
 }
