--- a/frontend/src/pages/VoteResults/VoteResults.css
+++ b/frontend/src/pages/VoteResults/VoteResults.css
@@ -7,14 +7,13 @@
   align-self: stretch;
   max-height: 80vh;
   overflow: hidden;
-  max-width: 1000px;
+  width: 1100px;
 }
 
 .filterButtons {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 8px;
 }
 
 .filterContainer {
@@ -105,9 +104,9 @@
   display: flex;
   align-items: flex-start;
   gap: 8px;
-  align-self: stretch;
+  width: 100%;
 }
 
-.graph.Partido {
+/* .graph.Partido {
   min-height: 100%;
-}
+} */
