--- a/frontend/src/components/listComponent/listComponent.css
+++ b/frontend/src/components/listComponent/listComponent.css
@@ -13,8 +13,9 @@
 .listImageContainer {
   display: flex;
   width: 100%;
-  height: 120px;
+  height: 100%;
   align-items: center;
+  background-color: rgb(123, 150, 216);
 }
 
 .listImage {
