--- a/frontend/src/components/listComponent/listComponent.css
+++ b/frontend/src/components/listComponent/listComponent.css
@@ -8,6 +8,7 @@
   border: 1px solid #eaeaea;
   background: rgba(250, 250, 250, 0.45);
   overflow: hidden;
+  transition: 0.3s;
 }
 
 .listImageContainer {
@@ -16,6 +17,11 @@
   height: 100%;
   align-items: center;
   background-color: rgb(123, 150, 216);
+}
+
+.listComponentContainer:hover {
+  outline: 3px solid rgba(36, 65, 142, 0.8);
+  transition: 0.3s;
 }
 
 .listImage {
