--- a/frontend/src/pages/VoteParty/VoteParty.css
+++ b/frontend/src/pages/VoteParty/VoteParty.css
@@ -2,3 +2,46 @@
   height: 600px;
   gap: 48px;
 }
+
+.errorInfo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  img {
+    width: 100px;
+    height: auto;
+    opacity: 0.4;
+    margin-bottom: 24px;
+    margin-top: 48px;
+  }
+}
+
+.container.errorUser {
+  width: 400px;
+}
+
+.container.Loading {
+  padding: 200px;
+  width: 500px;
+}
+
+.loader {
+  width: 50px;
+  padding: 8px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: #24418e;
+  --_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+  mask: var(--_m);
+  -webkit-mask-composite: source-out;
+  mask-composite: subtract;
+  animation: l3 1s infinite linear;
+}
+@keyframes l3 {
+  to {
+    transform: rotate(1turn);
+  }
+}
