--- a/frontend/src/components/GraphComponent/GraphComponent.css
+++ b/frontend/src/components/GraphComponent/GraphComponent.css
@@ -4,7 +4,7 @@
   padding-top: 8px;
   flex-direction: column;
   align-items: center;
-  gap: 16px;
+  gap: 4px;
   border-radius: 16px;
   border: 1px solid #d9d9d9;
   background: rgba(255, 255, 255, 0.35);
@@ -26,7 +26,7 @@
   padding: 8px;
   align-items: center;
   justify-content: space-between;
-  border-radius: 24px;
+  border-radius: 32px;
   background: rgba(255, 255, 255, 0.35);
   width: 90px;
   height: 40px;
@@ -38,11 +38,19 @@
   height: 40px;
   color: none;
   padding: 0px;
-  border-radius: 16px;
+  border-radius: 32px;
+
+  img {
+    opacity: 0.5;
+  }
 }
 
-.pieChartButton:focus {
+.pieChartButton.Selected {
   background: white;
+
+  img {
+    opacity: 100;
+  }
 }
 
 .pieChartButton:hover {
@@ -74,4 +82,25 @@
 .barChart {
   max-width: 100%;
   max-height: 100%;
+}
+
+.winnerInfo {
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.graphComponentContainer.loading {
+  height: 390px;
+}
+
+.loaderContainer {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  p {
+    color: #5e5e5e;
+  }
 }
