--- a/frontend/src/pages/VoteResults/VoteResults.css
+++ b/frontend/src/pages/VoteResults/VoteResults.css
@@ -22,13 +22,12 @@
   display: flex;
   padding: 4px 24px;
   justify-content: space-between;
-  width: 100%;
   align-items: center;
   border-radius: 16px;
   border: 1px solid #d9d9d9;
   background: rgba(255, 255, 255, 0.35);
   height: 44px;
-  width: 100%;
+  width: 90%;
 }
 
 .inputAndFilter {
@@ -38,6 +37,12 @@
   justify-content: center;
   gap: 8px;
   align-self: stretch;
+  width: 100%;
+}
+
+.disabledInput {
+  opacity: 0.3;
+  cursor: not-allowed;
 }
 
 .filterResultButton {
@@ -58,7 +63,7 @@
   background: #ffffff7e;
 }
 
-.filterResultButton:focus {
+.filterResultButton.Selected {
   background: white;
 }
 
@@ -67,7 +72,8 @@
   min-width: 210px;
   background-color: white;
   margin: 0;
-  width: 95%;
+  width: 100%;
+  background-image: none;
 }
 
 .filterTitle {
@@ -87,7 +93,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 48px;
+  gap: 32px;
   width: 100%;
   height: 100%;
 }
@@ -107,6 +113,22 @@
   width: 100%;
 }
 
-/* .graph.Partido {
-  min-height: 100%;
-} */
+.inputAndButton {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  gap: 8px;
+  align-items: center;
+}
+
+.searchPersonButtonS {
+  height: 50px;
+  width: 65px;
+  display: flex;
+  padding: 0;
+  border-radius: 500;
+
+  img {
+    filter: brightness(100);
+  }
+}
