--- a/frontend/src/pages/VoteSummary/VoteSummary.css
+++ b/frontend/src/pages/VoteSummary/VoteSummary.css
@@ -2,7 +2,10 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  gap: 32px;
+  gap: 40px;
+  padding: 16px;
+  padding-left: 48px;
+  padding-right: 48px;
 }
 
 .image {
@@ -149,10 +152,12 @@
       }
     }
     .letter-context {
-      margin-top: 10px;
-      margin-left: 5px;
+      margin-top: 15px;
+      margin-left: 10px;
       height: 10px;
-      width: 20%;
+      width: 50%;
+      color: #24418e;
+      font-size: 12px;
       /* background: #cb5a5e; */
     }
 
@@ -213,4 +218,25 @@
   .shadow {
     width: 250px;
   }
+}
+
+.voteInfo {
+  max-width: 350px;
+}
+
+.partyImageEnvelopeContainer {
+  width: 40px;
+  height: 40px;
+  place-self: flex-end;
+  margin-right: 10px;
+  margin-top: 10px;
+  border-radius: 100px;
+  border: #6079c0 solid 1px;
+  overflow: hidden;
+}
+
+.partyImageEnvelope {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
