--- a/frontend/src/components/GraphComponent/GraphComponent.css
+++ b/frontend/src/components/GraphComponent/GraphComponent.css
@@ -91,7 +91,11 @@
 }
 
 .graphComponentContainer.loading {
-  height: 390px;
+  height: 385px;
+}
+
+.graphComponentContainer.error {
+  height: 385px;
 }
 
 .loaderContainer {
@@ -102,5 +106,24 @@
   justify-content: center;
   p {
     color: #5e5e5e;
+  }
+}
+
+.ganadoresResumen {
+  color: #414143;
+}
+
+.errorMessage {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #414143;
+  opacity: 0.7;
+  font-size: 16px;
+
+  img {
+    opacity: 0.3;
   }
 }
