--- a/frontend/src/pages/VoteSummary/VoteSummary.css
+++ b/frontend/src/pages/VoteSummary/VoteSummary.css
@@ -222,6 +222,23 @@
 
 .voteInfo {
   max-width: 350px;
+  display: flex;
+  flex-direction: column;
+  color: #414143;
+
+  h3 {
+    margin: 2px;
+    font-size: 20px;
+  }
+
+  h4 {
+    margin-top: 8px;
+    margin-bottom: 0;
+  }
+
+  p {
+    margin-top: 4px;
+  }
 }
 
 .partyImageEnvelopeContainer {
@@ -239,4 +256,9 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.infoSecundaria {
+  font-size: 14px;
+  color: rgba(65, 65, 67, 0.7);
 }
